--- a/index.html
+++ b/index.html
@@ -27,53 +27,53 @@
             <ul data-role="listview">
                 <li>ASL Frequency (M) <span class='constrain-btn' data-jbox-title="ASL Frequency (M)" onclick='confirm();'>Constrain</span></li>
                 <li>ASL Frequency (Z) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (SD) <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
+                <li>ASL Frequency (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (SD)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Phonological Properties</h4>
             <ul data-role="listview">
-                <li>Sign Type <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Selected Fingers <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Flexion <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Major Location <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Minor Location <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Movement <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
+                <li>Sign Type <span class='constrain-btn' data-jbox-title="Sign Type" onclick='confirm();'>Constrain</span></li>
+                <li>Selected Fingers <span class='constrain-btn' data-jbox-title="Selected Fingers" onclick='confirm();'>Constrain</span></li>
+                <li>Flexion <span class='constrain-btn' data-jbox-title="Flexion" onclick='confirm();'>Constrain</span></li>
+                <li>Major Location <span class='constrain-btn' data-jbox-title="Major Location" onclick='confirm();'>Constrain</span></li>
+                <li>Minor Location <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Movement <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Iconicity Properties</h4>
             <ul data-role="listview">
-                <li>Iconicity (M) <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Iconicity (Z) <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Iconicity (SD) <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
+                <li>Iconicity (M) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Iconicity (Z) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Iconicity (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Lexical Properties</h4>
             <ul data-role="listview">
-                <li>Part of Speech <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Initialization <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Compound (SD) <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
+                <li>Part of Speech <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Initialization <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Compound (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Neighborhood Density</h4>
             <ul data-role="listview">
-                <li>Selected Finger ND <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Hand Shape ND <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Major Location ND <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Minor Location ND <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Multiple Feature ND <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
+                <li>Selected Finger ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Hand Shape ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Major Location ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Minor Location ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Multiple Feature ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Video Properties</h4>
             <ul data-role="listview">
-                <li>Video <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Onset Time <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Offset Time <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
-                <li>Duration <span class='constrain-btn' onclick='confirm();'>Constrain</span></li>
+                <li>Video <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Onset Time <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Offset Time <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Duration <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
     </div>
