--- a/index.html
+++ b/index.html
@@ -37,43 +37,43 @@
                 <li>Selected Fingers <span class='constrain-btn' data-jbox-title="Selected Fingers" onclick='confirm();'>Constrain</span></li>
                 <li>Flexion <span class='constrain-btn' data-jbox-title="Flexion" onclick='confirm();'>Constrain</span></li>
                 <li>Major Location <span class='constrain-btn' data-jbox-title="Major Location" onclick='confirm();'>Constrain</span></li>
-                <li>Minor Location <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Movement <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Minor Location <span class='constrain-btn' data-jbox-title="Minor Location" onclick='confirm();'>Constrain</span></li>
+                <li>Movement <span class='constrain-btn' data-jbox-title="Movement" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Iconicity Properties</h4>
             <ul data-role="listview">
-                <li>Iconicity (M) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Iconicity (Z) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Iconicity (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Iconicity (M) <span class='constrain-btn' data-jbox-title="Iconicity (M)" onclick='confirm();'>Constrain</span></li>
+                <li>Iconicity (Z) <span class='constrain-btn' data-jbox-title="Iconicity (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Iconicity (SD) <span class='constrain-btn' data-jbox-title="Iconicity (SD)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Lexical Properties</h4>
             <ul data-role="listview">
-                <li>Part of Speech <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Initialization <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Compound (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Part of Speech <span class='constrain-btn' data-jbox-title="Part of Speech" onclick='confirm();'>Constrain</span></li>
+                <li>Initialization <span class='constrain-btn' data-jbox-title="Initialization" onclick='confirm();'>Constrain</span></li>
+                <li>Compound (SD) <span class='constrain-btn' data-jbox-title="Compound (SD)" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Neighborhood Density</h4>
             <ul data-role="listview">
-                <li>Selected Finger ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Hand Shape ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Major Location ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Minor Location ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Multiple Feature ND <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Selected Finger ND <span class='constrain-btn' data-jbox-title="Selected Finger ND" onclick='confirm();'>Constrain</span></li>
+                <li>Hand Shape ND <span class='constrain-btn' data-jbox-title="Hand Shape ND" onclick='confirm();'>Constrain</span></li>
+                <li>Major Location ND <span class='constrain-btn' data-jbox-title="Major Location ND" onclick='confirm();'>Constrain</span></li>
+                <li>Minor Location ND <span class='constrain-btn' data-jbox-title="Minor Location ND" onclick='confirm();'>Constrain</span></li>
+                <li>Multiple Feature ND <span class='constrain-btn' data-jbox-title="Multiple Feature ND" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
         <div class='filter-box' data-role="collapsible" data-mini="true">
             <h4>Video Properties</h4>
             <ul data-role="listview">
-                <li>Video <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Onset Time <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Offset Time <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Duration <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                <li>Video <span class='constrain-btn' data-jbox-title="Video" onclick='confirm();'>Constrain</span></li>
+                <li>Onset Time <span class='constrain-btn' data-jbox-title="Onset Time" onclick='confirm();'>Constrain</span></li>
+                <li>Offset Time <span class='constrain-btn' data-jbox-title="Offset Time" onclick='confirm();'>Constrain</span></li>
+                <li>Duration <span class='constrain-btn' data-jbox-title="Duration" onclick='confirm();'>Constrain</span></li>
             </ul>
         </div>
     </div>
