added minor data handling

--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 </head>
 <body>
     <div style="display: none" id="jBox-slider-grab">
+	<input name="text-basic" id="constraint-A" placeholder="Lower Constraint" value="" type="text">
+	<input name="text-basic" id="constraint-B" placeholder="Upper Constraint" value="" type="text">
+
+        <!--
         <form id='slide-form'>
             <div data-role="rangeslider" data-track-theme="a" data-theme="b">
                 <label>Constrain:</label>
-                <input type="range" name="range-3a" id="range-A" min="0" max="100" value="20">
-                <input type="range" name="range-3b" id="range-B" min="0" max="100" value="100">
+                <input type="range" id="range-A" min="0" max="100" value="20">
+                <input type="range" id="range-B" min="0" max="100" value="100">
             </div>
         </form>
+        -->
     </div>
     <div class='filter-constrain'>
         <div class='filter-box' data-role="collapsible" data-mini="true">
