added tabs / updated graph settings

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="css/jBox.css">
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/jquery-mobile.min.js"></script>
+    <script src="js/lib/jquery-ui.min.js"></script>
     <script src="js/lib/jBox.min.js"></script>
     <script src="js/lib/sigma.min.js"></script>
+    <link href="css/tabcontent.css" rel="stylesheet" type="text/css" />
+    <script src="js/lib/tabcontent.js" type="text/javascript"></script>
     <script src="js/lib/plugins/sigma.parsers.json.min.js"></script>
-    <script src="js/word_data.js" type="text/javascript"></script>
     <script src="js/filter_data.js" type="text/javascript"></script>
-    <script src="js/sigma_data.js" type="text/javascript"></script>
     <script src="js/filter.js" type="text/javascript"></script>
 </head>
 <body>
@@ -23,71 +24,103 @@
 	   <input name="text-basic" id="constraint-B" placeholder="Upper Constraint" value="" type="text">
     </div>
 
-    <!-- container used to test sigma and filtering -->
+    <!-- container used to run sigma and filtering -->
     <div id='sigma-container'>
 	
     </div>
 
     <!-- table of filtering / constraint options -->
-    <div class='filter-constrain'>
-        <div class='filter-box' data-role="collapsible" data-mini="true">
-            <h4>Frequency Properties</h4>
-            <ul data-role="listview">
-                <li>ASL Frequency (M) <span class='constrain-btn' data-jbox-title="ASL Frequency (M)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (Z) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (SD)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (N) <span class='constrain-btn' data-jbox-title="ASL Frequency (N)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (M, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (M, Native)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (Z, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z, Native)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (SD, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (SD, Native)" onclick='confirm();'>Constrain</span></li>
-                <li>ASL Frequency (N, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (N, Native)" onclick='confirm();'>Constrain</span></li>
-            </ul>
-        </div>
-        <div class='filter-box' data-role="collapsible" data-mini="true">
-            <h4>Phonological Properties</h4>
-            <ul data-role="listview">
-                <li>Sign Type <span class='constrain-btn' data-jbox-title="Sign Type" onclick='confirm();'>Constrain</span></li>
-                <li>Selected Fingers <span class='constrain-btn' data-jbox-title="Selected Fingers" onclick='confirm();'>Constrain</span></li>
-                <li>Flexion <span class='constrain-btn' data-jbox-title="Flexion" onclick='confirm();'>Constrain</span></li>
-                <li>Major Location <span class='constrain-btn' data-jbox-title="Major Location" onclick='confirm();'>Constrain</span></li>
-                <li>Minor Location <span class='constrain-btn' data-jbox-title="Minor Location" onclick='confirm();'>Constrain</span></li>
-                <li>Movement <span class='constrain-btn' data-jbox-title="Movement" onclick='confirm();'>Constrain</span></li>
-            </ul>
-        </div>
-        <div class='filter-box' data-role="collapsible" data-mini="true">
-            <h4>Iconicity Properties</h4>
-            <ul data-role="listview">
-                <li>Iconicity (M) <span class='constrain-btn' data-jbox-title="Iconicity (M)" onclick='confirm();'>Constrain</span></li>
-                <li>Iconicity (Z) <span class='constrain-btn' data-jbox-title="Iconicity (Z)" onclick='confirm();'>Constrain</span></li>
-                <li>Iconicity (SD) <span class='constrain-btn' data-jbox-title="Iconicity (SD)" onclick='confirm();'>Constrain</span></li>
-            </ul>
-        </div>
-        <div class='filter-box' data-role="collapsible" data-mini="true">
-            <h4>Lexical Properties</h4>
-            <ul data-role="listview">
-                <li>Part of Speech <span class='constrain-btn' data-jbox-title="Part of Speech" onclick='confirm();'>Constrain</span></li>
-                <li>Initialization <span class='constrain-btn' data-jbox-title="Initialization" onclick='confirm();'>Constrain</span></li>
-                <li>Compound (SD) <span class='constrain-btn' data-jbox-title="Compound (SD)" onclick='confirm();'>Constrain</span></li>
-            </ul>
-        </div>
-        <div class='filter-box' data-role="collapsible" data-mini="true">
-            <h4>Neighborhood Density</h4>
-            <ul data-role="listview">
-                <li>Selected Finger ND <span class='constrain-btn' data-jbox-title="Selected Finger ND" onclick='confirm();'>Constrain</span></li>
-                <li>Hand Shape ND <span class='constrain-btn' data-jbox-title="Hand Shape ND" onclick='confirm();'>Constrain</span></li>
-                <li>Major Location ND <span class='constrain-btn' data-jbox-title="Major Location ND" onclick='confirm();'>Constrain</span></li>
-                <li>Minor Location ND <span class='constrain-btn' data-jbox-title="Minor Location ND" onclick='confirm();'>Constrain</span></li>
-                <li>Multiple Feature ND <span class='constrain-btn' data-jbox-title="Multiple Feature ND" onclick='confirm();'>Constrain</span></li>
-            </ul>
-        </div>
-        <div class='filter-box' data-role="collapsible" data-mini="true">
-            <h4>Video Properties</h4>
-            <ul data-role="listview">
-                <li>Video <span class='constrain-btn' data-jbox-title="Video" onclick='confirm();'>Constrain</span></li>
-                <li>Onset Time <span class='constrain-btn' data-jbox-title="Onset Time" onclick='confirm();'>Constrain</span></li>
-                <li>Offset Time <span class='constrain-btn' data-jbox-title="Offset Time" onclick='confirm();'>Constrain</span></li>
-                <li>Duration <span class='constrain-btn' data-jbox-title="Duration" onclick='confirm();'>Constrain</span></li>
-            </ul>
+    <div class="main-container">
+        <ul class="tabs">
+            <li class='selected'><a href="#about-container">About</a></li>
+            <li><a href="#filter-container">Filter</a></li>
+            <li id='data-tab'><a href="#data-container">Word Data</a></li>
+        </ul>
+        <div class="tabcontents">
+            <div id="about-container">
+                <h2>ASLLex</h2>
+                <p>A cheater's guide to ASL poetry</p>
+                <p><a href='#'>More about this visualisation</a></p>
+                <h3>Legend:</h3>
+                <table>
+                    <tr>
+                        <td><img src='css/images/node_size.png' width='15px'></td>
+                        <td>Larger sizes correspond to high frequency words</td>
+                    </tr>
+                    <tr>
+                        <td><img src='css/images/edge.png' width='15px'></td>
+                        <td>Signs that share phonological properties are connected by edges</td>
+                    </tr>
+                    <tr>
+                        <td><img src='css/images/color_wheel.png' width='15px'></td>
+                        <td>Signs that are closely phonologically related share the same color</td>
+                    </tr>
+                </table>
+            </div>
+            <div id='filter-container'>
+                <div class='filter-box' data-role="collapsible" data-mini="true">
+                    <h4>Frequency Properties</h4>
+                    <ul data-role="listview">
+                        <li>ASL Frequency (M) <span class='constrain-btn' data-jbox-title="ASL Frequency (M)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (Z) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (SD) <span class='constrain-btn' data-jbox-title="ASL Frequency (SD)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (N) <span class='constrain-btn' data-jbox-title="ASL Frequency (N)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (M, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (M, Native)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (Z, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (Z, Native)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (SD, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (SD, Native)" onclick='confirm();'>Constrain</span></li>
+                        <li>ASL Frequency (N, Native) <span class='constrain-btn' data-jbox-title="ASL Frequency (N, Native)" onclick='confirm();'>Constrain</span></li>
+                    </ul>
+                </div>
+                <div class='filter-box' data-role="collapsible" data-mini="true">
+                    <h4>Phonological Properties</h4>
+                    <ul data-role="listview">
+                        <li>Sign Type <span class='constrain-btn' data-jbox-title="Sign Type" onclick='confirm();'>Constrain</span></li>
+                        <li>Selected Fingers <span class='constrain-btn' data-jbox-title="Selected Fingers" onclick='confirm();'>Constrain</span></li>
+                        <li>Flexion <span class='constrain-btn' data-jbox-title="Flexion" onclick='confirm();'>Constrain</span></li>
+                        <li>Major Location <span class='constrain-btn' data-jbox-title="Major Location" onclick='confirm();'>Constrain</span></li>
+                        <li>Minor Location <span class='constrain-btn' data-jbox-title="Minor Location" onclick='confirm();'>Constrain</span></li>
+                        <li>Movement <span class='constrain-btn' data-jbox-title="Movement" onclick='confirm();'>Constrain</span></li>
+                    </ul>
+                </div>
+                <div class='filter-box' data-role="collapsible" data-mini="true">
+                    <h4>Iconicity Properties</h4>
+                    <ul data-role="listview">
+                        <li>Iconicity (M) <span class='constrain-btn' data-jbox-title="Iconicity (M)" onclick='confirm();'>Constrain</span></li>
+                        <li>Iconicity (Z) <span class='constrain-btn' data-jbox-title="Iconicity (Z)" onclick='confirm();'>Constrain</span></li>
+                        <li>Iconicity (SD) <span class='constrain-btn' data-jbox-title="Iconicity (SD)" onclick='confirm();'>Constrain</span></li>
+                    </ul>
+                </div>
+                <div class='filter-box' data-role="collapsible" data-mini="true">
+                    <h4>Lexical Properties</h4>
+                    <ul data-role="listview">
+                        <li>Part of Speech <span class='constrain-btn' data-jbox-title="Part of Speech" onclick='confirm();'>Constrain</span></li>
+                        <li>Initialization <span class='constrain-btn' data-jbox-title="Initialization" onclick='confirm();'>Constrain</span></li>
+                        <li>Compound (SD) <span class='constrain-btn' data-jbox-title="Compound (SD)" onclick='confirm();'>Constrain</span></li>
+                    </ul>
+                </div>
+                <div class='filter-box' data-role="collapsible" data-mini="true">
+                    <h4>Neighborhood Density</h4>
+                    <ul data-role="listview">
+                        <li>Selected Finger ND <span class='constrain-btn' data-jbox-title="Selected Finger ND" onclick='confirm();'>Constrain</span></li>
+                        <li>Hand Shape ND <span class='constrain-btn' data-jbox-title="Hand Shape ND" onclick='confirm();'>Constrain</span></li>
+                        <li>Major Location ND <span class='constrain-btn' data-jbox-title="Major Location ND" onclick='confirm();'>Constrain</span></li>
+                        <li>Minor Location ND <span class='constrain-btn' data-jbox-title="Minor Location ND" onclick='confirm();'>Constrain</span></li>
+                        <li>Multiple Feature ND <span class='constrain-btn' data-jbox-title="Multiple Feature ND" onclick='confirm();'>Constrain</span></li>
+                    </ul>
+                </div>
+                <div class='filter-box' data-role="collapsible" data-mini="true">
+                    <h4>Video Properties</h4>
+                    <ul data-role="listview">
+                        <li>Video <span class='constrain-btn' data-jbox-title="Video" onclick='confirm();'>Constrain</span></li>
+                        <li>Onset Time <span class='constrain-btn' data-jbox-title="Onset Time" onclick='confirm();'>Constrain</span></li>
+                        <li>Offset Time <span class='constrain-btn' data-jbox-title="Offset Time" onclick='confirm();'>Constrain</span></li>
+                        <li>Duration <span class='constrain-btn' data-jbox-title="Duration" onclick='confirm();'>Constrain</span></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="data-container">
+                <p>Click on a node to see data on it.</p>
+            </div>
         </div>
     </div>
 </body>
