added zoom buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	
     </div>
 
-    <!-- table of filtering / constraint options -->
+    <!-- main tabs holding about / filtering / word data -->
     <div class="main-container">
         <ul class="tabs">
             <li class='selected'><a href="#about-container">About</a></li>
@@ -121,6 +121,19 @@
             <div id="data-container">
                 <p>Click on a node to see data on it.</p>
             </div>
+        </div>
+    </div>
+
+    <!-- container holding zoom buttons -->
+    <div class='zoom-container'>
+        <div class='zoom-btn zoom-in'>
+            <img src='css/images/zoom_in.png' />
+        </div>
+        <div class="zoom-btn zoom-out">
+            <img src='css/images/zoom_out.png' />
+        </div>
+        <div class="zoom-btn zoom-reset">
+            <img src='css/images/zoom_reset.png' />
         </div>
     </div>
 </body>
