--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jquery-mobile.min.css">
     <link rel="stylesheet" href="css/jBox.css">
+    <link href="css/tabcontent.css" rel="stylesheet" type="text/css" />
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/jquery-mobile.min.js"></script>
     <script src="js/lib/jquery-ui.min.js"></script>
+    <script src='js/lib/jquery.auto-complete.min.js'></script>
     <script src="js/lib/jBox.min.js"></script>
     <script src="js/lib/sigma.min.js"></script>
-    <link href="css/tabcontent.css" rel="stylesheet" type="text/css" />
     <script src="js/lib/tabcontent.js" type="text/javascript"></script>
     <script src="js/lib/plugins/sigma.parsers.json.min.js"></script>
     <script src="js/filter_data.js" type="text/javascript"></script>
@@ -31,7 +32,6 @@
 
     <!-- container used to run sigma and filtering -->
     <div id='sigma-container'>
-	
     </div>
 
     <!-- main tabs holding about / filtering / word data -->
@@ -60,7 +60,18 @@
                         <td><img src='css/images/color_wheel.png' width='15px'></td>
                         <td>Signs that are closely phonologically related share the same color</td>
                     </tr>
+                    <tr>
+                        <td><img src='css/images/disable.png' width='15px'></td>
+                        <td>Nodes that are grey are disabled due to applied filters</td>
+                    </tr>
                 </table>
+
+                <div class="ui-widget" id='search-widget'>
+                    <form onsubmit="$('#search-input').blur().focus();return false;" class="pure-form" style="border-top: 1px solid #eee;margin:10px 0 0 0;padding:10px;text-align:center">
+                        <p>Search for word:</p>
+                        <input id="search-input" autofocus type="text" name="q" style="width:100%;max-width:600px;outline:0">
+                    </form>
+                </div>
             </div>
             <div id='filter-container'>
                 <p><a href='#' onclick='removeFilters()'>Remove All Filters</a></p>
