--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/jquery-mobile.min.js"></script>
     <script src="js/lib/jquery-ui.min.js"></script>
-    <script src='js/lib/jquery.auto-complete.min.js'></script>
     <script src="js/lib/jBox.min.js"></script>
     <script src="js/lib/sigma.min.js"></script>
     <script src="js/lib/tabcontent.js" type="text/javascript"></script>
     <script src="js/lib/plugins/sigma.parsers.json.min.js"></script>
+    <script src="js/lib/plugins/sigma.plugins.animate.min.js"></script>
     <script src="js/filter_data.js" type="text/javascript"></script>
     <script src="js/filter.js" type="text/javascript"></script>
 </head>
