added video embedding

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             </div>
             <div id="data-container">
                 <p>Click on a node to see data on it.</p>
+                <iframe id="word_vid" width="100%" src="" frameborder="0"></iframe>
             </div>
         </div>
     </div>
