--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jquery-mobile.min.css">
     <link rel="stylesheet" href="css/jBox.css">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+    <link href="css/bootleg-buttons.css" rel="stylesheet" type="text/css" />
     <link href="css/tabcontent.css" rel="stylesheet" type="text/css" />
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/jquery-mobile.min.js"></script>
     <script src="js/lib/jquery-ui.min.js"></script>
+    <!-- <script src="js/lib/bootstrap.min.js"></script> -->
     <script src="js/lib/jBox.min.js"></script>
     <script src="js/lib/sigma.min.js"></script>
     <script src="js/lib/tabcontent.js" type="text/javascript"></script>
@@ -23,6 +26,13 @@
     <div style="display: none" id="jBox-slider-grab">
 	   <input name="text-basic" id="constraint-A" placeholder="Lower Constraint" value="" type="text">
 	   <input name="text-basic" id="constraint-B" placeholder="Upper Constraint" value="" type="text">
+    </div>
+
+    <div style="display: none" id="jBox-toggle-grab">
+        <div class="btn-group" data-toggle="buttons-checkbox">
+            <input type="checkbox" id="group1" data-toggle="button">
+            <label class="btn btn-primary" for="group1">Left</label>
+        </div>
     </div>
 
     <!-- HTML for popup(s) used for constraints (used by jBox) -->
