fixed tab, updated readme

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="tabs">
             <li class='selected'><a href="#about-container">About</a></li>
             <li><a href="#filter-container">Filter</a></li>
-            <li id='data-tab'><a href="#data-container">Word Data</a></li>
+            <li id='data-tab'><a href="#data-container">Sign Data</a></li>
         </ul>
         <div class="tabcontents">
             <div id="about-container">
