--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="js/filter.js" type="text/javascript"></script>
 </head>
 <body>
+    <img id='loading_gif' src='css/images/loading_spinner.gif' />
+
     <!-- HTML for popup(s) used for constraints (used by jBox) -->
     <div style="display: none" id="jBox-slider-grab">
 	   <input name="text-basic" id="constraint-A" placeholder="Lower Constraint" value="" type="text">
